// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  className="elementContainer"
>
  <input
    className="element"
    name="Name"
    type="text"
  />
  <span
    className="afterFormElement"
  />
</div>
`;

exports[`Input renders required input correctly 1`] = `
<div
  className="elementContainer"
>
  <input
    className="element"
    name="Name"
    required={true}
    type="text"
  />
  <span
    className="afterFormElement"
  />
</div>
`;
